k8s/deployment.yml
apiVersion: apps/v1   # versions before 1.9.0 use apps/v1beta2
kind: Deployment
metadata:
  name: threesixtyallround-wp
  labels:
    app: threesixtyallround-wp
  namespace: threesixtyallround-web-ns
spec:
  selector:
    matchLabels:
      app: threesixtyallround-wp
      tier: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: threesixtyallround-wp
        tier: frontend
    spec:
      containers:
        - image: wordpress:latest
          name: wordpress
          ports:
            - containerPort: 80
              name: wordpress
          resources:
            requests:
              memory: "100Mi"
              cpu: "10m"
            limits:
              memory: "350Mi"
              cpu: "250m"
          volumeMounts:
            - name: wordpress-persistent-storage
              mountPath: /var/www/html
      volumes:
        - name: wordpress-persistent-storage
          persistentVolumeClaim:
            claimName: threesixtyallround-wp-pv-claim
