k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: threesixtyallround-web-service
  namespace: threesixtyallround-web-ns
spec:
  selector:
    app: threesixtyallround-web
  ports:
    - port: 80 # Default port for image
