k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: threesixtyallround-web-ingress
  namespace: threesixtyallround-web-ns
spec:
  tls:
  - hosts:
    - 360allround.com
    secretName: threesixtyallround-web-tls
  rules:
  - host: 360allround.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: threesixtyallround-web-service
            port:
              number: 80
